--- a/README
+++ b/README
@@ -1,7 +1,6 @@
 Pacman
-------
-
-This is a clone of the original pacman from Namco, as I remember , and I played 
+------------------------------------------------------------------------
+This is a clone of the original Pac-Man from Namco, as I remember, and I played 
 for the first time on an Atari 130 XL in the early 90s.
 But Paul Neaves pacman clone has inspired me greatly.
 One of the main goals of this implementation is a SDL Application with very
@@ -9,13 +8,11 @@ less use of CPU power.
 
 
 Install hint
-------------
-
+------------------------------------------------------------------------
 You need libsdl, sdl-image, sdl-ttf and sdl-mixer. 
 
 
 License
--------------------
-
+------------------------------------------------------------------------
 pacman is licensed under the terms of the GNU General Public License 
-version 2 (or any later version).
+version 3 (or any later version).
